# arbitrary

./: README.md  pyproject.toml  test_arbitrary.py
modules/: arbitrary.py
