[tool.poetry]
name = "arbitrary-ansible"
version = "0.1.0"
description = ""
authors = ["Julius Kreuzer <julius.kreuzer+git@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
